fix: disable hover styles on mobile devices

--- a/coffe-house/pages/home/style.css
+++ b/coffe-house/pages/home/style.css
@@ -59,11 +59,6 @@
     transition: all ease 0.5s;
 }
 
-.slider__button:hover svg path{
-    stroke: var(--background-color-body);
-    transition: all ease 0.5s;
-}
-
 .slider__slide {
     max-width: 480px;
     text-align: center;
@@ -144,11 +139,6 @@
     transition: all ease 1s;
 }
 
-.about__img:hover img{
-    transform: scale(100%);
-    transition: all ease 1s;
-}
-
 .mobile__container {
     display: flex;
     justify-content: space-between;
@@ -214,10 +204,6 @@
     .about__img img {
         transform: scale(105%);
     }
-    
-    .about__img:hover img {
-        transform: scale(97%);
-    }
 }
 
 @media (max-width: 692px) {
@@ -271,3 +257,19 @@
         transform: scale(125%);
     }
 } 
+
+@media (hover: hover) {
+    .slider__button:hover svg path{
+        stroke: var(--background-color-body);
+        transition: all ease 0.5s;
+    }
+
+    .about__img:hover img{
+        transform: scale(100%);
+        transition: all ease 1s;
+    }
+
+    .about__img:hover img {
+        transform: scale(97%);
+    }
+}
